Refactored mobile-menu-toggler into a separate file.

--- a/Template/kontakt.html
+++ b/Template/kontakt.html
@@ -175,5 +175,6 @@
          about cross browser dom-ready crap -->
     <script src="js/menu_panel.js"></script>
     <script src="js/sticky-header.js"></script>
+    <script src="js/mobile-menu-toggler.js"></script>
   </body>
 </html>
