--- a/Template/kontakt.html
+++ b/Template/kontakt.html
@@ -118,7 +118,7 @@
             </form>
               <div id="canteen" class="tabContent">
               <h3>Om bedriften</h3>
-              <p>Da Carlo har N års erfaring med kantinedrift. Fortell oss litt mer om din bedrift og hva du ønsker hjelp til.</p>
+              <p>Da Carlo har mange års erfaring med kantinedrift. Fortell oss litt mer om din bedrift og hva du ønsker hjelp til.</p>
               <form>
                 <input id="companyName" type="text" name="bedriftsNavn" placeholder="Bedriftens navn" />
                 <label for="bedriftsNavn">Bedriftens navn</label>
