added documentation comments

--- a/Template/kontakt.html
+++ b/Template/kontakt.html
@@ -1,3 +1,14 @@
+<!--
+
+FILE NAME: kontakt.html
+
+WRITTEN BY: Maia Elisabeth Sirnes
+
+WHEN: November 2016
+
+PURPOSE: provide a channel of contact between potential customers and Da Carlo
+
+-->
 
 <!DOCTYPE html>
 <html>
@@ -55,12 +66,9 @@
           <div class="text-wrapper">
             <h2>Kontakt</h2>
 
-              <p id="introtext">Ikke nøl med å ta kontakt for en uforpliktende samtale der vi ser om vi kan imøtekomme dine behov og preferanser. Vårt mål er å gjøre din sammenkomst til en minneverdig, og genuin smaksopplevelse med en latinsk signatur! <br>
-              Eller trenger du kanskje en dyktig og erfaren kokk med gode referanser til firmaets kantine, ta kontakt.</p>
-              <!--TODO: remove space between number and mail-->
-
-              <p id="introtext">Ikke nøl med å ta kontakt for en uforpliktende samtale der vi ser om vi kan imøtekomme dine behov og preferanser. Vårt mål er å gjøre din sammenkomst til en minneverdig, og genuin smaksopplevelse med en latinsk signatur! </p>
-
+              <p id="introtext">Ikke nøl med å ta kontakt for en uforpliktende samtale der vi ser om vi kan imøtekomme dine behov og preferanser. Vårt mål er å gjøre din sammenkomst til en minneverdig, og genuin smaksopplevelse med en latinsk signatur!
+                Trenger du en dyktig og erfaren kokk med gode referanser til firmaets kantine, ta kontakt.
+              </p>
               <div class="right">
                 <p class="phone">+47 428 83 247</p>
                 <p class="mailto">
