added some comments and small fixes

--- a/Template/catering.html
+++ b/Template/catering.html
@@ -1,3 +1,12 @@
+<!--
+FILE NAME: catering.html
+
+WRITTEN BY: Linn Harbo Dahle
+
+WHEN: October 2016
+
+PURPOSE: this page gives information about the menus that Da Carlo provide
+-->
 <!DOCTYPE html>
 <html>
   <head>
@@ -152,12 +161,13 @@
     float: none;
   }
   /*Moving the boxes in the correct place*/
+  /*TO DO gjøres på alle sidene?*/
   .menu{
     margin-top: -12rem;
   }
   .cateringQuote{
     margin-top: -4rem;
-    /*z-index: 20; /*TO DO m: riktig måte å gjør det på?*/
+    /*z-index: 20; /*TO DO : riktig måte å gjør det på?*/
   }
   .lastRow{ /* TO DO alle?: legge til på andre sider?*/
     margin-bottom: 4rem;
