--- a/Template/kontakt.html
+++ b/Template/kontakt.html
@@ -182,7 +182,7 @@ PURPOSE: provide a channel of contact between potential customers and Da Carlo
 
     <!-- include javascript files in end of body, so we don't have to care
          about cross browser dom-ready crap -->
-    <script src="js/menu_panel.js"></script>
+    <script src="js/menu-panel.js"></script>
     <script>
       var sendForm = document.getElementById('btnSubmit');
       // document.getElementById("btnSubmit").addEventListener("click", submitInfo());
