--- a/Template/index.html
+++ b/Template/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Da Carlo Template</title>
+    <title>Da Carlo Catering</title>
 
     <!-- define viewport to ensure no horizontal scroll -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,19 +14,100 @@
     <!-- include google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,400i"rel="stylesheet">
+
+    <!-- page specific styles for index.html -->
     <style>
+
+      /* ---------------------------
+         Front page header carousel
+         --------------------------- */
+
+      /* make the carousel container take up the entire header */
+      #headerCarousel {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        z-index: 1;
+        background: #000;
+      }
+
+      /* position every slide on top of each other, make them transparent */
+      .slide {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        opacity: 0;
+        transition: .5s opacity;
+      }
+
+      /* make the active element visible */
+      .slide.active {
+        opacity: 1;
+      }
+
+      /* scale the image after its height (mobile) */
+      .slide img{
+        height: 100%;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        opacity: .6;
+      }
+
+      /* ---------------------------
+         Other front page specific styles
+         --------------------------- */
+
+      /* extra space between last paragraph and button on front page */
+      main .text-wrapper p + a.button {
+        margin-top: 2rem;
+      }
 
       @media screen and (min-width: 960px){
 
-        .right{
+        /* scale the carousel image after its width (desktop) */
+        .slide img{
+          height: auto;
+          left: auto;
+          top: 50%;
+          width: 100%;
+          transform: translate(0, -50%);
+        }
+
+        /* vertical box layout and z-axis positioning */
+        #intro-catering {
           margin-top: -8rem;
+          padding-bottom: 8rem
+        }
+
+        #intro-canteen {
+          margin-top: -12rem;
           z-index: 2;
         }
-        .left{
-          margin-top: -2rem;
-        }
-      }
 
+        #intro-about {
+          margin-top: 16rem;
+          z-index: 4;
+        }
+
+        #intro-about + figure {
+          width: calc(6 * 4rem);
+          height: calc(10 * 4rem);
+          position: absolute;
+          right: 0;
+          top: -8rem;
+          overflow: hidden;
+          margin: 0;
+          z-index: 3;
+        }
+
+        /* change the crop of the image */
+        #intro-about + figure img {
+          transform: translateY(-10%);
+        }
+
+      }
 
     </style>
 
@@ -44,6 +125,8 @@
     <header>
       <!-- logo -->
       <h1 id="logo">Da Carlo Catering</h1>
+
+      <!-- navigation -->
       <div id="main-nav-toggler">
         <span></span>
         <span></span>
@@ -58,6 +141,26 @@
           <li><a href="#">Kontakt</a></li>
         </ul>
       </nav>
+
+      <!-- header carousel on frontpage -->
+      <div id="headerCarousel">
+        <div class="slide">
+          <img src="img/header-carousel/webtek_paella.jpg" alt="Paella">
+        </div>
+        <div class="slide">
+          <img src="img/header-carousel/webtek_chilli.jpg" alt="Chilli">
+        </div>
+        <div class="slide">
+          <img src="img/header-carousel/webtek_klasetomat.jpg" alt="Tomatoes">
+        </div>
+        <div class="slide">
+          <img src="img/header-carousel/webtek_paprika.jpg" alt="Peppers">
+        </div>
+        <div class="slide">
+          <img src="img/header-carousel/webtek_tomat.jpg" alt="Tomatoes two">
+        </div>
+      </div>
+
     </header>
 
     <!-- page content -->
@@ -65,67 +168,90 @@
       <section class="intro">
         <div class="container">
           <h2>Velkommen</h2>
-          <p>Da Carlo består av Juan Carlos, Cesare og Roberto, tre erfarne kokker som tilsammen representerer matkultur fra det italienske, det spanske og det latinamerikanske kjøkkenet. Dette betyr at vi kan tilby rike smaksopplevelser tilberedt med de ypperste råvarer og med latinsk temperament.
-
+          <p>
+            Da Carlo består av Juan Carlos, Cesare og Roberto, tre erfarne kokker
+            som tilsammen representerer matkultur fra det italienske, det spanske
+            og det latinamerikanske kjøkkenet. Dette betyr at vi kan tilby rike
+            smaksopplevelser tilberedt med de ypperste råvarer og med latinsk temperament.
           </p>
         </div>
       </section>
 
       <section class="row">
         <div class="container">
-          <div class="box left">
+          <div id="intro-catering" class="box right dark">
             <div class="text-wrapper">
               <h3>Catering</h3>
-              <p>Vårt varemerke er personlig service og individuell tilpasning. Kokkene som gjør avtale med deg, er også de som lager maten og følger den helt frem til lokalet der maten presenteres for gjestene. På denne måten sikrer vi at dine ønsker og preferanser ivaretas på en god måte. Vi bruker kun råvarer av topp kvalitet og tilbereder dem på beste måte med vår erfaring fra det latinske kjøkkenet.
+              <p>
+                Vårt varemerke er personlig service og individuell tilpasning.
+                Kokkene som gjør avtale med deg, er også de som lager maten og
+                følger den helt frem til lokalet der maten presenteres for gjestene.
+                På denne måten sikrer vi at dine ønsker og preferanser ivaretas på
+                en god måte.
+              </p>
+              <p>
+                Vi bruker kun råvarer av topp kvalitet og tilbereder
+                dem på beste måte med vår erfaring fra det latinske kjøkkenet.
               </p>
               <a href="#" class="button">Se vår cateringmeny</a>
             </div>
           </div>
-          <figure>
-            <img src="img/en-kokk.jpg" alt="" />
-          </figure>
-          <div class="box right tight dark">
+          <!--
+          <div id="catering-quote" class="box left tight dark">
             <div class="text-wrapper">
               <blockquote cite="http://nets.no">
                 <p>Da Carlo leverer ikke bare mat, men en opplevelse!</p>
                 <footer>Marie Nelsvik, i Nets strømmen</footer>
               </blockquote>
             </div>
-          </div>
+          </div>-->
         </div>
       </section>
 
       <section class="row">
         <div class="container">
-          <div class="box left blue">
+          <div id="intro-canteen" class="box left">
             <div class="text-wrapper">
               <h3>Kantine</h3>
-              <p>Hver bedrift har sine ulike behov og vi i Da Carlo er opptatt av et aktivt samarbeid for å finne frem til gode løsninger og skreddersy et konsept som kan imøtekomme akkurat deres ønsker og preferanser. Ta kontakt for nærmere informasjon. Vi er en samarbeidspartner du kan stole på.
+              <p>
+                Hver bedrift har sine ulike behov og vi i Da Carlo er opptatt av
+                et aktivt samarbeid for å finne frem til gode løsninger og skreddersy
+                et konsept som kan imøtekomme akkurat deres ønsker og preferanser.
+              </p>
+              <p>
+                Ta kontakt for nærmere informasjon. Vi er en samarbeidspartner
+                du kan stole på.
               </p>
               <a href="#" class="button">Se vår kantinemeny</a>
             </div>
           </div>
-          <figure>
-            <img src="img/en-kokk.jpg" alt="" />
-          </figure>
         </div>
       </section>
 
       <section class="row">
         <div class="container">
-          <div class="box right">
+          <div id="intro-about" class="box center blue">
             <div class="text-wrapper">
-              <h3>Om oss</h3>
-              <p>God mat gir en ekstra dimensjon til alle møter mellom mennesker, om det er i kantina på jobben, store høytidsdager eller uformelle firmafester.
-                Vi har samlet de beste smakene fra det italienske, spanske og latinamerikanske kjøkkenet og ønsker å tilby spennende og minneverdige smaksopplevelser tilpasset dere.
+              <h3>Hvem vi er</h3>
+              <p>
+                God mat gir en ekstra dimensjon til alle møter mellom mennesker,
+                om det er i kantina på jobben, store høytidsdager eller uformelle
+                firmafester.
+              </p>
+              <p>
+                Vi har samlet de beste smakene fra det italienske,
+                spanske og latinamerikanske kjøkkenet og ønsker å tilby spennende
+                og minneverdige smaksopplevelser tilpasset dere.
               </p>
               <a href="#" class="button">Les mer om oss</a>
             </div>
           </div>
+          <figure>
+            <img src="img/lmh-kokker11.jpg" alt="Ansatte Da Carlo Catering" />
+          </figure>
         </div>
       </section>
 
-      
     </main>
 
     <!-- call to action -->
@@ -155,9 +281,11 @@
       </div>
     </footer>
 
-    <!-- include javascript files in end of body, so we don't have to care
-         about cross browser dom-ready crap -->
+    <!-- include javascript files -->
     <script src="js/sticky-header.js"></script>
     <script src="js/mobile-menu-toggler.js"></script>
+
+    <!-- include page specific javascript files -->
+    <script src="js/header-carousel.js"></script>
   </body>
 </html>
